# Calculator

./: README.md
Calculator/: CMakeLists.txt
Calculator/inc/: callback_maths.hpp  main.hpp
Calculator/src/: callback.cpp  callback_maths.cpp
